Start Development - Navbar Example

--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap / CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 
@@ -14,26 +13,75 @@
 </head>
 
 <body>
-
+    <!-- Navbar / Link -->
     <div class="container-fluid bg-primary">
-        <h1>Lorem ipsum dolor sit amet consectetur adipisicing.</h1>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Features</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Pricing</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     </div>
+    <!-- Jumbotron -->
+    <div class="container jumbotron-holder">
 
-
-
-
-
-    <div class="container bg-success w70 float-left">
-        <div class="">
-            <h1>Lorem ipsum dolor sit amet consectetur adipisicing.</h1>
+    </div>
+    <!-- Main Contents -->
+    <div class="container bg-success w70 float-left ml-3">
+        <div class="row">
+            <div class="h100 col-lg-4">
+                <h1>Technology</h1>
+            </div>
+            <div class="h100 col-lg-4">
+                <h1>Technology</h1>
+            </div>
+            <div class="h100 col-lg-4">
+                <h1>Technology</h1>
+            </div>
+            <div class="h100 col-lg-4">
+                <h1>Technology</h1>
+            </div>
+            <div class="h100 col-lg-4">
+                <h1>Technology</h1>
+            </div>
+            <div class="h100 col-lg-4">
+                <h1>Technology</h1>
+            </div>
+            <div class="h100 col-lg-4">
+                <h1>Technology</h1>
+            </div>
+            <div class="h100 col-lg-4">
+                <h1>Technology</h1>
+            </div>
+            <div class="h100 col-lg-4">
+                <h1>Technology</h1>
+            </div>
         </div>
     </div>
-
-    <div class="container bg-dark w30 float-left">
+    <!-- Aside Props -->
+    <div class="container bg-dark w25 float-right mr-3">
         <div>
             <h1>Lorem ipsum dolor sit amet consectetur adipisicing.</h1>
         </div>
     </div>
+
+    <footer class="container-fluid bg-dark">
+
+    </footer>
 
 
 
